# UsEquityStrategies

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  qsl.toml
.github/: CODEOWNERS  dependabot.yml
docs/: thesis-ledger.json  tqqq_ai_extensions.md  tqqq_concrete_simulator_v1.md  tqqq_research_baseline_sma_arithmetic_reslice_v1.md  tqqq_research_baseline_v1.md  tqqq_research_simulator_v1.md  tqqq_session_asof_foundation_v1.md  tqqq_session_asof_pure_foundation_v2.md  tqqq_session_snapshot_consumer_v1.md  tqqq_session_snapshot_numeric_contract_v1.md  trading_calendar_anchor.md  trading_calendar_c0.md  trading_calendar_c0_schema_first.md  us_equity_contract_gap_matrix.md  us_equity_notification_i18n_contract.md  us_equity_notification_i18n_contract.zh-CN.md  us_equity_portability_checklist.md  us_equity_runtime_archive.md  us_equity_runtime_archive.zh-CN.md  us_equity_strategy_status.md  us_equity_strategy_status.zh-CN.md  us_equity_strategy_template.md  us_equity_value_mode_input_contract.md  xnas_trading_calendar_v1.md  xnas_trusted_loader.md
scripts/: __init__.py  backtest_russell_1000_multi_factor_defensive.py  build_russell_1000_universe_history.py  fetch_russell_1000_price_history.py  fetch_russell_1000_universe_snapshots.py  gate_codex_app_review.py  gate_evidence_package.py  generate_cash_buffer_branch_feature_snapshot.py  generate_qqq_tech_enhancement_feature_snapshot.py  generate_russell_1000_feature_snapshot.py  generate_tech_pullback_cash_buffer_feature_snapshot.py  research_us_equity_combo_backtest.py  research_us_proxy_orchestrator_backtest.py  run_drift_github_issues.py  run_global_etf_walk_forward_pilot.py  run_r3_joint_evidence.py  run_russell_1000_data_prep_task.py  run_russell_1000_snapshot_task.py  run_tqqq_bounded_optimization_adapter.py  run_walk_forward_backtest.py
tests/: test_account_sizing.py  test_ai_extensions.py  test_cash_buffer_branch_default.py  test_cash_buffer_branch_feature_snapshot.py  test_cash_only_equity.py  test_catalog.py  test_combo_simulator.py  test_contract_governance.py  test_drift_workflow_config.py  test_dynamic_mega_leveraged_pullback.py  test_entrypoint_risk_gate.py  test_entrypoints.py  test_global_etf_research_evidence.py  test_global_etf_rotation.py  test_ibit_smart_dca.py  test_ibit_smart_dca_backtest.py  test_income_layer.py  test_market_regime_control_consumption.py  test_market_regime_control_contract.py  test_mega_cap_leader_rotation.py  test_mega_cap_leader_rotation_dynamic_top20.py  test_nasdaq_sp500_smart_dca.py  test_option_overlay.py  test_orchestrator_research.py  test_r3_joint_evidence.py  (+53 more)
(+140 files in other folders)
