[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-equity-strategies"
version = "0.7.60"
description = "Shared US equity strategy catalog and implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pytz>=2024.1",
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@780b6f8da6a6f7419a12c8f909a415624c98f8eb",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
us_equity_strategies = ["configs/*.json"]

[tool.ruff]
target-version = "py311"
ignore = ["E701", "E702", "E741", "F841", "F821", "B008", "F401", "F601", "E402"]
