[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-equity-strategies"
version = "0.7.60"
description = "Shared US equity strategy catalog and implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pytz>=2024.1",
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@31892425a02242126265ac07a626d98796daa459",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
us_equity_strategies = ["configs/*.json"]

[tool.ruff]
target-version = "py311"
ignore = ["E701", "E702", "E741", "F841", "F821", "B008", "F401", "F601", "E402"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true
